--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/TouchController/TCClassicWiiPad.xib
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/TouchController/TCClassicWiiPad.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,25 +15,27 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CmZ-Qk-cWa" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="282" y="352" width="77" height="77"/>
+                    <rect key="frame" x="329" y="418.5" width="30" height="30"/>
                     <state key="normal" title="R"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
                             <integer key="value" value="324"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isAxis" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VaJ-5t-Ufz" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="16" y="352" width="77" height="77"/>
+                    <rect key="frame" x="16" y="418.5" width="30" height="30"/>
                     <state key="normal" title="L"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
                             <integer key="value" value="323"/>
                         </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isAxis" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZUx-cz-2iN" userLabel="X" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="269.5" y="434" width="43" height="43"/>
+                    <rect key="frame" x="276" y="473" width="30" height="30"/>
                     <state key="normal" title="X"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -42,7 +44,7 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IeZ-Gw-Cg9" userLabel="B" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="269.5" y="508" width="43" height="43"/>
+                    <rect key="frame" x="276" y="521" width="30" height="30"/>
                     <state key="normal" title="B"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -77,7 +79,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="or8-Tl-OXK" userLabel="DPad" customClass="TCDirectionalPad" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="22.5" y="435" width="115" height="115"/>
+                    <rect key="frame" x="22.5" y="454.5" width="115" height="115"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="115" id="hi5-84-cvG"/>
@@ -90,7 +92,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bX1-HL-45P" userLabel="Plus" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="-12.5" y="537" width="128" height="128"/>
+                    <rect key="frame" x="134.5" y="635" width="30" height="30"/>
                     <state key="normal" title="+"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -99,7 +101,7 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KHS-18-m3u" userLabel="HOME" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="123.5" y="537" width="128" height="128"/>
+                    <rect key="frame" x="172.5" y="635" width="30" height="30"/>
                     <state key="normal" title="+"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -108,10 +110,10 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="zqt-aB-qTs">
-                    <rect key="frame" x="228" y="471" width="126" height="43"/>
+                    <rect key="frame" x="241" y="497" width="100" height="30"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Du-dW-M0M" userLabel="Y" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="43" height="43"/>
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                             <state key="normal" title="Y"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -120,7 +122,7 @@
                             </userDefinedRuntimeAttributes>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vn6-Pn-XaS" userLabel="A" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                            <rect key="frame" x="83" y="0.0" width="43" height="43"/>
+                            <rect key="frame" x="70" y="0.0" width="30" height="30"/>
                             <state key="normal" title="A"/>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -131,7 +133,7 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdf-vR-LSp" userLabel="ZL" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="16" y="302" width="77" height="77"/>
+                    <rect key="frame" x="16" y="415.5" width="30" height="30"/>
                     <state key="normal" title="ZL"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -140,7 +142,7 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k7a-nk-YIF" userLabel="ZR" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="282" y="302" width="77" height="77"/>
+                    <rect key="frame" x="329" y="415.5" width="30" height="30"/>
                     <state key="normal" title="ZR"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
@@ -149,7 +151,7 @@
                     </userDefinedRuntimeAttributes>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rHI-vG-Rbc" userLabel="Minus" customClass="TCButton" customModule="DolphiniOS" customModuleProvider="target">
-                    <rect key="frame" x="259.5" y="537" width="128" height="128"/>
+                    <rect key="frame" x="210.5" y="635" width="30" height="30"/>
                     <state key="normal" title="-"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="controllerButton">
